# fundamentals-of-algoritmization-and-programming

./: 1st_lab_cpp  2nd_lab  3rd lab cpp(remake of example)  README.md
1-st-sem/lab3/: lab3.bpr  lab3.cpp
1-st-sem/lab4/: lab4.bpr  lab4.cpp
1-st-sem/lab5/: lab05.bpr  lab05.res
1-st-sem/lab5/test/: test-correct-values.txt  test-no-zero-value.txt  test-only-one-zero.txt
1-st-sem/lab6/: lab6.cpp
2-nd-sem/calculating-results-of-equation/: CMakeLists.txt  main.cpp
2-nd-sem/graphics-demo/: CMakeLists.txt  install.sh  main.cpp
2-nd-sem/part-text-into-words/: CMakeLists.txt  main.cpp  main.cpp.save
2-nd-sem/queue/: CMakeLists.txt  main.cpp
2-nd-sem/stack/: CMakeLists.txt  main.cpp
2-nd-sem/structs-and-files/: CMakeLists.txt  main.cpp
2-nd-sem/trees/: CMakeLists.txt  main.cpp
lab3/test/: test-data.txt
lab5/: lab5.cpp
lab6/: lab6.bpr  lab6.cpp
lab7/: lab7.bpr  lab7.cpp
literature/: .~lock.c++builder_part1.doc#  .~lock.c++builder_part2.doc#
